# autonomous_drone_racing

./: README.md
airsim_ros_pkgs/: CMakeLists.txt  package.xml
airsim_ros_pkgs/include/: airsim_ros_wrapper.h
airsim_ros_pkgs/launch/: .airsim_node.launch.swp  .ls.swp  airsim_node.launch  static_transforms.launch.save
airsim_ros_pkgs/rviz/: default.rviz  racing.rviz  rgb-d_settings.rviz
airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp
controller/: CMakeLists.txt  package.xml
controller/launch/: controller.launch
controller/src/: position_controller.cpp
core/: CMakeLists.txt  package.xml
core/launch/: tier1.launch
core/logging/: visualize.py  visualize.py.save
core/msg/: State.msg  Trajectory.msg
core/rviz/: racing.rviz
